# harmonizer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: query-migration-translation-bug.md  translator-bug.md
.github/workflows/: cd.yaml  ci.yaml
dune/harmonizer/: __init__.py  custom_transforms.py  schemas.py  table_replacements.py  translate.py
dune/harmonizer/dialects/: dunesql.py  test.py
dune/harmonizer/dunesql/: __init__.py  dunepostgres.py  dunesql.py  optimize.py  transform.py
dune/translate/: __init__.py  constants.py  custom_transforms.py  errors.py  helpers.py  table_replacements.py  translate.py
tests/: cases.py  helpers.py  test_dialect.py  test_schemas.py  test_translate.py  update_expected_outputs.py
tests/dunesql/: test_dunesql.py  test_optimize.py
tests/sqlglot_test_cases/: aliases.out  dex.in  dex.out  interval.out  matic.in  matic.out
tests/test_cases/: aliases.in  aliases.out  bytea2numeric.in  bytea2numeric.out  bytea_lower.in  bytea_lower.out  bytea_param.in  dex.out  interval.out  matic.out  now.out  param.in  param.out
tests/test_cases/postgres/: 0x_strings_leading_0.in  0x_strings_leading_0.out  aliases.out  array.in  array.out  bytea.in  bytea.out  bytea2numeric.out  concat_x.in  concat_x.out  cross_join.in  cross_join.out  dex.in  dex_ethereum.out  dex_polygon.out  explicit_cast.in  explicit_cast.out  generate_series.in  generate_series.out  generate_series_alias.in  generate_series_alias.out  integer_division.out  interval.in  interval.out  median.in  median.out  now.out  order_by.in  order_by.out  table_replacement.in  table_replacement.out  unnest_array.in  unnest_array.out  unnest_table.in  unnest_table.out
tests/test_cases/spark/: 0x_strings.in  0x_strings.out  0x_strings_leading_0.in  0x_strings_leading_0.out  array_index.in  (+23 more)
