[tool.poetry]
name = "dune-query-translator"
version = "0.3.0"
description = ""
authors = ["Vegard Stikbakke <vegard@dune.com>"]
readme = "README.md"
packages = [{include = "dune"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlglot = "^11.4.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
ruff = "^0.0.259"
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
# Same as Black.
line-length = 120
