[tool.poetry]
name = "dune-harmonizer"
version = "0.17.1"
description = ""
authors = ["Vegard Stikbakke <vegard@dune.com>"]
readme = "README.md"
packages = [{include = "dune"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlglot = "^12.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
ruff = "^0.0.259"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
# Same as Black.
line-length = 120
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
]
